force-app/main/default/objects/pse__Resource_Request__c/fields/CT_Estimated_Revenue__c.field-meta.xml
<CustomField>
    <fullName>CT_Estimated_Revenue__c</fullName>
    <formula>pse__Suggested_Bill_Rate_Number__c  *  pse__SOW_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>