force-app/main/default/objects/pse__Resource_Request__c/fields/Unapproved_only_for_data_migration__c.field-meta.xml
<CustomField>
    <fullName>Unapproved_only_for_data_migration__c</fullName>
    <formula>If( pse__Project__r.Unapproved_only_for_data_migration__c == TRUE, TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unapproved (only for data migration)</label>
    <type>Checkbox</type>
</CustomField>