force-app/main/default/objects/pse__Resource_Request__c/validationRules/pse__Distance_Threshold_Is_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Distance_Threshold_Is_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNULL(pse__Distance_Threshold__c)),pse__Distance_Threshold__c &lt; 0)</errorConditionFormula>
    <errorMessage>The maximum distance must be a positive number or zero.</errorMessage>
</ValidationRule>