force-app/main/default/objects/pse__Resource_Request__c/listViews/Open_Resource_Requests.listView-meta.xml
<ListView>
    <fullName>Open_Resource_Requests</fullName>
    <columns>NAME</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Resource_Role__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__SOW_Hours__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Allow_Candidates_to_Self_Nominate__c</columns>
    <columns>pse__Self_Nomination_Deadline__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>pse__Assignment__c</field>
        <operation>equals</operation>
    </filters>
    <label>Open Resource Requests</label>
</ListView>